# dbt-local-test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/dbt/: Dockerfile
.docker/hudi/: run.sh
.docker/hudi/data/: load.py  payments.csv
dbt_example/: .user.yml  dbt_project.yml
dbt_example/models/: int_customers_per_store.sql  int_revenue_by_date.sql  schema.yml
dbt_example/profiles/: profiles.yml
dbt_spark_example/: dbt_project.yml
dbt_spark_example/models/: schema.yml  sources.yml  stg_payment.sql
dbt_spark_example/profiles/: profiles.yml
dbt_spark_example/seeds/: properties.yml
dockerfiles/dbt/: Dockerfile
dockerfiles/hudi/: Dockerfile  entrypoint.sh  run.sh
