[tool.poetry]
name = "dbt-example"
version = "0.1.0"
description = ""
authors = ["Kevin Larrabee <139161041+KLarrabee-Arcadia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dbt_example"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-postgres = "1.3.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
