[tool.poetry]
name = "dbt-example"
version = "0.1.0"
description = ""
authors = ["Kevin Larrabee <139161041+KLarrabee-Arcadia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dbt_example"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.7.10"
# dbt-spark = "1.7"
# pytz = "^2024.1"
dbt-spark = {extras = ["pyhive"], version = "^1.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
